# ai-lab

./: .gitignore  README.md  pyproject.toml
common/: file_tlk.py  text_tlk.py
doc/: lenovo_topic_analysis_reviews_summary.pages  twitter_hate_review_summary.pages
nlp/: lenovo_topic_analysis_reviews.ipynb  twitter_hate_review.ipynb
work_book/: book_works.ipynb
