[tool.poetry]
name = "ai-lab"
version = "0.1.0"
description = "lab files for AI project"
authors = ["Sri Thuraisamy <sri@watchblade.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
autopep8 = "^1.6.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.2"
tensorflow = "^2.7.0"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.1"
jupyter = "^1.0.0"
sklearn = "^0.0"
keras = "^2.7.0"
nltk = "^3.6.5"
pytest = "^6.2.5"
gensim = "^4.1.2"
tqdm = "^4.62.3"
ipykernel = "^6.5.1"
wordcloud = "^1.8.1"
nbconvert = "^6.3.0"
SpeechRecognition = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
